# fastapi-multi-server-mcp

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: api_deployment.md  api_reference.md
servers/: currency.py  news.py  quotes.py  weather.py
tests/: test_currency.py  test_news.py  test_quotes.py  test_weather.py
utils/: api_clients.py  config.py
